# sw-explorer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  file_table_model.cpp  file_table_model.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  version.rc.in
core/: CMakeLists.txt
core/include/swcore/: extractor.h  idb_parser.h  types.h
core/src/: extractor.cpp  idb_parser.cpp
